bug: sous iPad, la proprité CSS -webkit-overflow-scrolling: touch; empechait tout interaction dans certains cas
git-svn-id: svn://svn.code.sf.net/p/mediboard/code/trunk@14602 a21d6be2-e512-0410-a060-91f5a2946631

--- a/style/mediboard/xhtml.css
+++ b/style/mediboard/xhtml.css
@@ -8,11 +8,15 @@ html, body {
   padding: 0;
   font-family: arial, helvetica, sans-serif;
   font-size: 11px;
-  -webkit-overflow-scrolling: touch;
 }
 
 body {
   background-color: #ddf;
+}
+
+/** Must not be set on the body, it freezes the view in certain cases (when closing modal windows, ...) */
+div.scroll {
+  -webkit-overflow-scrolling: touch;
 }
 
 iframe {
